# speech-to-text

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  KEYS  LICENSE  PRIVACY.md  README.md  SECURITY.md  THREATMODEL.md  build.rs  deny.toml  rustfmt.toml  speech-to-text.spec
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
data/: com.chrisdaggas.speech-to-text.desktop  com.chrisdaggas.speech-to-text.metainfo.xml
data/locale/de/LC_MESSAGES/: speech-to-text.mo
data/locale/el/LC_MESSAGES/: speech-to-text.mo
data/locale/es/LC_MESSAGES/: speech-to-text.mo
data/locale/fr/LC_MESSAGES/: speech-to-text.mo
data/locale/it/LC_MESSAGES/: speech-to-text.mo
data/locale/pt/LC_MESSAGES/: speech-to-text.mo
data/locale/ru/LC_MESSAGES/: speech-to-text.mo
data/locale/zh/LC_MESSAGES/: speech-to-text.mo
data/resources/: com.chrisdaggas.speech-to-text.gresource.xml  style.css
packaging/: README.md  speech-to-text.spec
po/: LINGUAS  POTFILES.in  de.po  el.po  es.po  fr.po  it.po  pt.po  ru.po  speech-to-text.pot  zh.po
scripts/: verify-release.sh
src/: application.rs  config.rs  error.rs  fsio.rs  i18n.rs  limits.rs  llm.rs  main.rs  recording.rs  secrets.rs  tray.rs  version_check.rs
src/api/: handlers.rs  mod.rs  server.rs
src/audio/: buffer.rs  capture.rs  file_decoder.rs  mod.rs
src/portal/: mod.rs  paste.rs  shortcuts.rs
src/transcription/: archive.rs  cohere.rs  engine.rs  mod.rs  model.rs  postprocess.rs  qwen.rs  safe_path.rs  summary.rs  verify.rs
src/ui/: controls.rs  header.rs  help_page.rs  history_page.rs  main_window.rs  mini_panel.rs  mod.rs  result_state.rs  sidebar.rs  status_bar.rs  transcript_view.rs  welcome_wizard.rs
src/ui/settings/: api.rs  dictation.rs  dictionary.rs  language.rs  llm.rs  microphone.rs  mod.rs  model.rs  performance.rs
src/ui/widgets/: gpu_status.rs  mod.rs  model_row.rs  theme_popover.rs
