[package]
name = "speech-to-text"
version = "1.4.0"
edition = "2021"
authors = ["Christos A. Daggas"]
description = "Native Linux desktop application for offline speech-to-text transcription using Whisper"
license = "MIT"
keywords = ["speech", "whisper", "transcription", "gtk", "gnome"]
categories = ["gui", "multimedia"]

[dependencies]
# GTK4 and Libadwaita
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_5"] }

# Async runtime. Explicit feature set (instead of "full") covering exactly what
# we use — multi-thread runtime + spawn_blocking, the IO/time drivers our HTTP
# client needs, async fs, and io-util for AsyncWrite — so we don't pull process/
# signal/test-util we never touch. Verified to build and pass tests.
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "net",
    "fs",
    "io-util",
] }

# HTTP client (for model downloads)
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Whisper speech-to-text engine (whisper.cpp bindings)
whisper-rs = "0.13"

# Audio capture
cpal = "0.15"

# High-quality audio resampling
rubato = "0.16"

# Audio file decoding (for drag-and-drop file transcription)
symphonia = { version = "0.5", features = ["all"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config directories
dirs = "5"

# Error handling
thiserror = "2"

# UUID for history entries
uuid = { version = "1", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Futures utilities
futures = "0.3"

# Internationalization
gettext-rs = { version = "0.7", features = ["gettext-system"] }

# Async channel for GTK integration
async-channel = "2"

# Zip extraction
zip = "2"

# Number of CPUs (for whisper thread count)
num_cpus = "1"

# Secret Service / keyring integration
oo7 = "0.6"

# XDG Desktop Portals: global shortcuts + remote-desktop (auto-paste) + clipboard.
# The Clipboard portal lets us own the system selection from the (unfocused) mini
# panel via the same RemoteDesktop session, so the current transcript is pasted
# regardless of focus — see src/portal/paste.rs.
ashpd = { version = "0.13", features = ["global_shortcuts", "remote_desktop", "screencast", "clipboard"] }
# Bitflags for the RemoteDesktop DeviceType selection (already in the tree via ashpd).
enumflags2 = "0.7"
ksni = "0.3.4"

# Integrity verification of downloaded artifacts (SHA-256)
sha2 = "0.10"
# Secure temporary files for sidecar WAV input (exclusive, random, 0600)
tempfile = "3"
# URL parsing/validation for the LLM endpoint
url = "2"

# Local HTTP API server (opt-in, localhost-only). A small hand-rolled hyper
# service — the route surface is tiny and we avoid pulling a full web framework
# (axum/tower) into a size-tuned desktop binary. reqwest already pulls hyper.
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
# multipart/form-data parsing for browser FormData uploads.
multer = "3"
# Byte buffers for the hyper request/response bodies.
bytes = "1"

[features]
default = []
gresource = []
cuda = ["whisper-rs/cuda"]
metal = ["whisper-rs/metal"]
# Vulkan GPU backend for whisper.cpp. Opt-in (like cuda/metal) so CPU-only
# builds don't require the Vulkan toolchain. Building this needs the Vulkan
# loader + headers and a GLSL compiler (glslc) to compile the compute shaders.
vulkan = ["whisper-rs/vulkan"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
